@@ -26,6 +26,7 @@ production.
 * (bug 30160) Add public method to mw.loader to get module names from registry.
 * (bug 15558) Parameters to special pages included in wikitext can now be passed
   as with templates.
+* Installer now issues a warning if mod_security is present.
 
 === Bug fixes in 1.19 ===
 * $wgUploadNavigationUrl should be used for file redlinks if
